<resources>
    <string name="app_name">Contact Application</string>
    <string name="contact_app_label">Contact App</string>
    <string name="contact_app_description">Welcome back, you can send message on below given contact</string>
    <string name="contacts_label">Contacts</string>
    <string name="message_label">Message</string>
    <string name="contact_details_label">Contact Details</string>
    <string name="send_message_label">Sent Message</string>
    <string name="close_label">Close</string>
    <string name="call_label">Call</string>
    <string name="video_label">Video</string>
    <string name="send_label">send</string>
    <string name="cancel_label">cancel</string>
</resources>