<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextColor="@color/white"
            app:contentScrim="@color/color_primary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:titleEnabled="true">

            <LinearLayout
                android:id="@+id/collapsing_view_container_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/title_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="@string/contact_app_label"
                    android:textColor="@color/text_color_on_primary"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/contact_app_description"
                    android:textColor="@color/text_color_on_primary"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/material_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:navigationIconTint="@color/white"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/header_container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:cardBackgroundColor="@color/color_shadow"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/contact_tab_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/tab_select"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="@string/contacts_label"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/message_tab_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="@string/messages_label"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>