<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ContactDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/material_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="@color/white"
            app:title="Contact Details"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_account"
                app:tint="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/contact_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    tools:text="Contact Name" />

                <TextView
                    android:id="@+id/contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    tools:text="7658457690" />

            </LinearLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/audio_call_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/call_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:src="@drawable/ic_call"
                        app:tint="@color/color_primary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/call_label"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/send_message_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:src="@drawable/ic_message"
                        app:tint="@color/color_primary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/message_label"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/video_call_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:src="@drawable/ic_video"
                        app:tint="@color/color_primary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/video_label"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

